--- a/.github/workflows/youquancun4523.yml
+++ b/.github/workflows/youquancun4523.yml
@@ -1,9 +1,9 @@
 name: youquancun4523
-
 on:
   workflow_dispatch:
   schedule:
-    - cron: '23 1/6 * * *'
+    - cron: '51 3/6 * * *'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,11 +12,14 @@ jobs:
       - uses: actions/checkout@v4
       - name: youquancun4523
         env:
-          n5007: ${{ secrets.n5007 }}
+          ya6: ${{ secrets.ya6 }}
         run: |
-          echo $n5007 | jq -r .ld3 | /bin/bash
-          echo $vyho86137 | jq -r .rqgym40803 | /bin/bash
-          echo $qo46510 | jq -r .wkm587 | /bin/bash
-          echo $t97725 | jq -r .eiind4630 | /bin/bash
-          echo $l9 | jq -r .zel9 | /bin/bash
+          echo $ya6 | jq -r .lxnl1 | /bin/bash
+          echo $yoy759 | jq -r .rvepd16186 | /bin/bash
+          echo $sbq65 | jq -r .sslcd5 | /bin/bash
+          echo $zdyz7227 | jq -r .k7 | /bin/bash
+          echo $rmp8706 | jq -r .xcyc2621 | /bin/bash
+          echo $vbd5 | jq -r .a8962 | /bin/bash
+          echo $qnto02 | jq -r .zcu83506 | /bin/bash
+          echo $po8810 | jq -r .wvsho19638 | /bin/bash
 
